--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
+    <base href="/">
+
     <title>Notes</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
